--- a/notebooks/xray_images.ipynb
+++ b/notebooks/xray_images.ipynb
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,65 +584,29 @@
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, Dropout, Activation, Flatten\n",
     "from tensorflow.keras.layers import Conv2D, MaxPooling2D\n",
-    "from tensorflow.keras.callbacks import TensorBoard\n"
+    "from tensorflow.keras.callbacks import TensorBoard\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/3\n"
+     "ename": "Error",
+     "evalue": "Session cannot generate requests",
+     "output_type": "error",
+     "traceback": [
+      "Error: Session cannot generate requests",
+      "at w.executeCodeCell (/home/francis/.vscode/extensions/ms-toolsai.jupyter-2021.9.1101343141/out/client/extension.js:52:301180)",
+      "at w.execute (/home/francis/.vscode/extensions/ms-toolsai.jupyter-2021.9.1101343141/out/client/extension.js:52:300551)",
+      "at w.start (/home/francis/.vscode/extensions/ms-toolsai.jupyter-2021.9.1101343141/out/client/extension.js:52:296215)",
+      "at runMicrotasks (<anonymous>)",
+      "at processTicksAndRejections (internal/process/task_queues.js:93:5)",
+      "at t.CellExecutionQueue.executeQueuedCells (/home/francis/.vscode/extensions/ms-toolsai.jupyter-2021.9.1101343141/out/client/extension.js:52:310950)",
+      "at t.CellExecutionQueue.start (/home/francis/.vscode/extensions/ms-toolsai.jupyter-2021.9.1101343141/out/client/extension.js:52:310490)"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-11-11 10:03:38.971712: W tensorflow/core/framework/cpu_allocator_impl.cc:80] Allocation of 1284636672 exceeds 10% of free system memory.\n",
-      "2021-11-11 10:03:53.115329: W tensorflow/core/framework/cpu_allocator_impl.cc:80] Allocation of 642318336 exceeds 10% of free system memory.\n",
-      "2021-11-11 10:03:53.115620: W tensorflow/core/framework/cpu_allocator_impl.cc:80] Allocation of 1284636672 exceeds 10% of free system memory.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/8 [==>...........................] - ETA: 2:37 - loss: 0.7102 - accuracy: 0.3750"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-11-11 10:04:00.700538: W tensorflow/core/framework/cpu_allocator_impl.cc:80] Allocation of 1284636672 exceeds 10% of free system memory.\n",
-      "2021-11-11 10:04:16.751006: W tensorflow/core/framework/cpu_allocator_impl.cc:80] Allocation of 642318336 exceeds 10% of free system memory.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8/8 [==============================] - 174s 22s/step - loss: -0.8207 - accuracy: 0.4273 - val_loss: 47.1905 - val_accuracy: 0.3367\n",
-      "Epoch 2/3\n",
-      "8/8 [==============================] - 170s 21s/step - loss: -29.2093 - accuracy: 0.4053 - val_loss: 32.5645 - val_accuracy: 0.3367\n",
-      "Epoch 3/3\n",
-      "8/8 [==============================] - 271s 34s/step - loss: 76.9241 - accuracy: 0.4053 - val_loss: 320.0911 - val_accuracy: 0.3367\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x7f3e023c99a0>"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -655,49 +619,181 @@
     "\n",
     "X = X/255.0\n",
     "\n",
-    "model = Sequential()\n",
+    "dense_layers = [0]\n",
+    "layer_sizes = [64]\n",
+    "conv_layers = [3]\n",
     "\n",
-    "model.add(Conv2D(256, (3, 3), input_shape=X.shape[1:]))\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "for dense_layer in dense_layers:\n",
+    "    for layer_size in layer_sizes:\n",
+    "        for conv_layer in conv_layers:\n",
+    "            NAME = \"{}-conv-{}-nodes-{}-dense-{}\".format(conv_layer, layer_size, dense_layer, int(time.time()))\n",
+    "            print(NAME)\n",
     "\n",
-    "model.add(Conv2D(256, (3, 3)))\n",
-    "model.add(Activation('relu'))\n",
-    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "            model = Sequential()\n",
     "\n",
-    "model.add(Flatten())  # this converts our 3D feature maps to 1D feature vectors\n",
+    "            model.add(Conv2D(256, (3, 3), input_shape=X.shape[1:]))\n",
+    "            model.add(Activation('relu'))\n",
+    "            model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "\n",
-    "model.add(Dense(64))\n",
+    "            model.add(Conv2D(256, (3, 3)))\n",
+    "            model.add(Activation('relu'))\n",
+    "            model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "\n",
-    "model.add(Dense(1))\n",
-    "model.add(Activation('sigmoid'))\n",
+    "            model.add(Flatten())  # this converts our 3D feature maps to 1D feature vectors\n",
     "\n",
-    "model.compile(loss='binary_crossentropy',\n",
+    "            model.add(Dense(64))\n",
+    "\n",
+    "            model.add(Dense(1))\n",
+    "            model.add(Activation('sigmoid'))\n",
+    "\n",
+    "            model.compile(loss='binary_crossentropy',\n",
     "              optimizer='adam',\n",
     "              metrics=['accuracy'])\n",
     "\n",
-    "model.fit(X, y, batch_size=32, epochs=3, validation_split=0.3)"
+    "            model.fit(X, y, batch_size=32, epochs=3, validation_split=0.3,callbacks=[tensorboard])\n",
+    "model.save('64x3-CNN.model')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tensorflow.keras.callbacks import TensorBoard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-11-11 11:32:31.648479: I tensorflow/core/profiler/lib/profiler_session.cc:131] Profiler session initializing.\n",
+      "2021-11-11 11:32:31.648548: I tensorflow/core/profiler/lib/profiler_session.cc:146] Profiler session started.\n",
+      "2021-11-11 11:32:31.652760: I tensorflow/core/profiler/lib/profiler_session.cc:164] Profiler session tear down.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "1/8 [==>...........................] - ETA: 4:30 - loss: -1617.1307 - accuracy: 0.3750"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-11-11 11:33:10.968018: I tensorflow/core/profiler/lib/profiler_session.cc:131] Profiler session initializing.\n",
+      "2021-11-11 11:33:10.968713: I tensorflow/core/profiler/lib/profiler_session.cc:146] Profiler session started.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2/8 [======>.......................] - ETA: 3:33 - loss: -1653.6516 - accuracy: 0.3750"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-11-11 11:33:46.462111: I tensorflow/core/profiler/lib/profiler_session.cc:66] Profiler session collecting data.\n",
+      "2021-11-11 11:33:46.481691: I tensorflow/core/profiler/lib/profiler_session.cc:164] Profiler session tear down.\n",
+      "2021-11-11 11:33:46.509974: I tensorflow/core/profiler/rpc/client/save_profile.cc:136] Creating directory: logs/normal_covid_pneumonia/train/plugins/profile/2021_11_11_11_33_46\n",
+      "\n",
+      "2021-11-11 11:33:46.514810: I tensorflow/core/profiler/rpc/client/save_profile.cc:142] Dumped gzipped tool data for trace.json.gz to logs/normal_covid_pneumonia/train/plugins/profile/2021_11_11_11_33_46/francis.trace.json.gz\n",
+      "2021-11-11 11:33:46.555516: I tensorflow/core/profiler/rpc/client/save_profile.cc:136] Creating directory: logs/normal_covid_pneumonia/train/plugins/profile/2021_11_11_11_33_46\n",
+      "\n",
+      "2021-11-11 11:33:46.556219: I tensorflow/core/profiler/rpc/client/save_profile.cc:142] Dumped gzipped tool data for memory_profile.json.gz to logs/normal_covid_pneumonia/train/plugins/profile/2021_11_11_11_33_46/francis.memory_profile.json.gz\n",
+      "2021-11-11 11:33:46.557636: I tensorflow/core/profiler/rpc/client/capture_profile.cc:251] Creating directory: logs/normal_covid_pneumonia/train/plugins/profile/2021_11_11_11_33_46\n",
+      "Dumped tool data for xplane.pb to logs/normal_covid_pneumonia/train/plugins/profile/2021_11_11_11_33_46/francis.xplane.pb\n",
+      "Dumped tool data for overview_page.pb to logs/normal_covid_pneumonia/train/plugins/profile/2021_11_11_11_33_46/francis.overview_page.pb\n",
+      "Dumped tool data for input_pipeline.pb to logs/normal_covid_pneumonia/train/plugins/profile/2021_11_11_11_33_46/francis.input_pipeline.pb\n",
+      "Dumped tool data for tensorflow_stats.pb to logs/normal_covid_pneumonia/train/plugins/profile/2021_11_11_11_33_46/francis.tensorflow_stats.pb\n",
+      "Dumped tool data for kernel_stats.pb to logs/normal_covid_pneumonia/train/plugins/profile/2021_11_11_11_33_46/francis.kernel_stats.pb\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8/8 [==============================] - 257s 31s/step - loss: -183.9823 - accuracy: 0.4053 - val_loss: 919.8672 - val_accuracy: 0.3367\n",
+      "Epoch 2/3\n",
+      "8/8 [==============================] - 246s 31s/step - loss: -777.8679 - accuracy: 0.4053 - val_loss: 599.1357 - val_accuracy: 0.3367\n",
+      "Epoch 3/3\n",
+      "8/8 [==============================] - 206s 26s/step - loss: -1035.0342 - accuracy: 0.4053 - val_loss: 39.5054 - val_accuracy: 0.3367\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f3e022db5b0>"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "\n",
-    "tensorboard = TensorBoard(log_dir=\"logs/{}\".format(NAME))\n",
+    "# NAME=\"normal_covid_pneumonia\"\n",
     "\n",
-    "model.compile(loss='binary_crossentropy',\n",
-    "              optimizer='adam',\n",
-    "              metrics=['accuracy'],\n",
-    "              )\n",
+    "# tensorboard = TensorBoard(log_dir=\"logs/{}\".format(NAME))\n",
+    "# model.compile(loss='binary_crossentropy',\n",
+    "#               optimizer='adam',\n",
+    "#               metrics=['accuracy'],\n",
+    "#               )\n",
     "\n",
-    "model.fit(X, y,\n",
-    "          batch_size=32,\n",
-    "          epochs=3,\n",
-    "          validation_split=0.3,\n",
-    "          callbacks=[tensorboard])"
+    "# model.fit(X, y,\n",
+    "#           batch_size=32,\n",
+    "#           epochs=3,\n",
+    "#           validation_split=0.3,\n",
+    "#           callbacks=[tensorboard])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "SavedModel file does not exist at: 64x3-CNN.model/{saved_model.pbtxt|saved_model.pb}",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_14732/4127765616.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"64x3-CNN.model\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mprediction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mprepare\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'covid.jpg'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/keras/saving/save.py\u001b[0m in \u001b[0;36mload_model\u001b[0;34m(filepath, custom_objects, compile, options)\u001b[0m\n\u001b[1;32m    203\u001b[0m         \u001b[0mfilepath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpath_to_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    204\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 205\u001b[0;31m           \u001b[0;32mreturn\u001b[0m \u001b[0msaved_model_load\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    206\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    207\u001b[0m   raise IOError(\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/keras/saving/saved_model/load.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(path, compile, options)\u001b[0m\n\u001b[1;32m    106\u001b[0m   \u001b[0;31m# Look for metadata file or parse the SavedModel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    107\u001b[0m   \u001b[0mmetadata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msaved_metadata_pb2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSavedMetadata\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 108\u001b[0;31m   \u001b[0mmeta_graph_def\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__internal__\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msaved_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse_saved_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmeta_graphs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    109\u001b[0m   \u001b[0mobject_graph_def\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmeta_graph_def\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobject_graph_def\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    110\u001b[0m   \u001b[0mpath_to_metadata_pb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconstants\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSAVED_METADATA_PATH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/tensorflow/python/saved_model/loader_impl.py\u001b[0m in \u001b[0;36mparse_saved_model\u001b[0;34m(export_dir)\u001b[0m\n\u001b[1;32m    116\u001b[0m       \u001b[0;32mraise\u001b[0m \u001b[0mIOError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Cannot parse file %s: %s.\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mpath_to_pbtxt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    117\u001b[0m   \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 118\u001b[0;31m     raise IOError(\n\u001b[0m\u001b[1;32m    119\u001b[0m         \u001b[0;34m\"SavedModel file does not exist at: %s%s{%s|%s}\"\u001b[0m \u001b[0;34m%\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    120\u001b[0m         (export_dir, os.path.sep, constants.SAVED_MODEL_FILENAME_PBTXT,\n",
+      "\u001b[0;31mOSError\u001b[0m: SavedModel file does not exist at: 64x3-CNN.model/{saved_model.pbtxt|saved_model.pb}"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def prepare(filepath):\n",
+    "    IMG_SIZE = 70  # 50 in txt-based\n",
+    "    img_array = cv2.imread(filepath, cv2.IMREAD_GRAYSCALE)\n",
+    "    new_array = cv2.resize(img_array, (IMG_SIZE, IMG_SIZE))\n",
+    "    return new_array.reshape(-1, IMG_SIZE, IMG_SIZE, 1)\n",
+    "\n",
+    "\n",
+    "model = tf.keras.models.load_model(\"64x3-CNN.model\")\n",
+    "\n",
+    "prediction = model.predict([prepare('covid.jpg')])\n",
+    "print(prediction)  # will be a list in a list.\n",
+    "print(CATEGORIES[int(prediction[0][0])])"
    ]
   },
   {
